exports[`drawer component accordion renders as expected 1`] = `
<div
  className="dtLLet">
  <div
    className="first byHzie">
    <div
      aria-controls="abcdef"
      aria-expanded={true}
      className="cqIlEf"
      onClick={[Function]}
      role="tab">
      <span>
        <i
          aria-hidden={true}
          className="cTarNb idGniF"
          content="63d"
          fontFamily="oecom-icons"
          fontSize="inherit" />
        collapse 1
      </span>
    </div>
    <div
      className="jJqMaE"
      id="abcdef"
      style={
        Object {
          "display": null,
          "height": "auto",
          "overflow": "hidden",
          "transition": "height .35s ease",
        }
      }>
      <div
        style={
          Object {
            "overflow": "hidden",
          }
        }>
        first
      </div>
    </div>
  </div>
  <div
    className="second byHzie">
    <div
      aria-controls="abcdef"
      aria-expanded={false}
      className="cqIlEf"
      onClick={[Function]}
      role="tab">
      <span>
        <i
          aria-hidden={true}
          className="cTarNb dyzqxb"
          content="63f"
          fontFamily="oecom-icons"
          fontSize="inherit" />
        collapse 2
      </span>
    </div>
    <div
      className="jJqMaE"
      id="abcdef"
      style={
        Object {
          "display": "none",
          "height": "0",
          "overflow": "hidden",
          "transition": "height .35s ease",
        }
      } />
  </div>
  <div
    className="third byHzie">
    <div
      aria-controls="abcdef"
      aria-expanded={false}
      className="cqIlEf"
      onClick={[Function]}
      role="tab">
      <span>
        <i
          aria-hidden={true}
          className="cTarNb dyzqxb"
          content="63f"
          fontFamily="oecom-icons"
          fontSize="inherit" />
        collapse 3
      </span>
    </div>
    <div
      className="jJqMaE"
      id="abcdef"
      style={
        Object {
          "display": "none",
          "height": "0",
          "overflow": "hidden",
          "transition": "height .35s ease",
        }
      } />
  </div>
</div>
`;

exports[`drawer component drawer renders as expected 1`] = `
<div
  className="important dtLLet">
  <div
    className="first byHzie">
    <div
      aria-controls="abcdef"
      aria-expanded={false}
      className="cqIlEf"
      onClick={[Function]}
      role="tab">
      <span>
        <i
          aria-hidden={true}
          className="cTarNb dyzqxb"
          content="63f"
          fontFamily="oecom-icons"
          fontSize="inherit" />
        collapse 1
      </span>
      <span>
        side text
      </span>
    </div>
    <div
      className="jJqMaE"
      id="abcdef"
      style={
        Object {
          "display": "none",
          "height": "0",
          "overflow": "hidden",
          "transition": "height .35s ease",
        }
      } />
  </div>
  <div
    className="second byHzie">
    <div
      aria-controls="abcdef"
      aria-expanded={false}
      className="cqIlEf"
      onClick={[Function]}
      role="tab">
      <span>
        <i
          aria-hidden={true}
          className="cTarNb dyzqxb"
          content="63f"
          fontFamily="oecom-icons"
          fontSize="inherit" />
        collapse 2
      </span>
    </div>
    <div
      className="jJqMaE"
      id="abcdef"
      style={
        Object {
          "display": "none",
          "height": "0",
          "overflow": "hidden",
          "transition": "height .35s ease",
        }
      } />
  </div>
  <div
    className="third byHzie">
    <div
      aria-controls="abcdef"
      aria-expanded={false}
      className="cqIlEf"
      onClick={[Function]}
      role="tab">
      <span>
        <i
          aria-hidden={true}
          className="cTarNb dyzqxb"
          content="63f"
          fontFamily="oecom-icons"
          fontSize="inherit" />
        collapse 3
      </span>
    </div>
    <div
      className="jJqMaE"
      id="abcdef"
      style={
        Object {
          "display": "none",
          "height": "0",
          "overflow": "hidden",
          "transition": "height .35s ease",
        }
      } />
  </div>
</div>
`;
